# media-manager

./: .ctoignore  .env.example  .gitignore  ANALYTICS_DASHBOARD_IMPLEMENTATION.md  API.md  ARCHITECTURE.md  AUTO_BUILD_IMPLEMENTATION_SUMMARY.md  AUTO_BUILD_README.md  AUTO_BUILD_SYSTEM.md  BUILD_PACKAGE_SUMMARY.md  BUILD_QUICK_START.md  CHANGELOG.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  CREATE_GITHUB_RELEASE.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DASHBOARD_USER_GUIDE.md  DELIVERY_CHECKLIST.md  DEPLOYMENT.md  DEVELOPMENT_SETUP.md  DOCS_DELIVERY_SUMMARY.md  DOCUMENTATION.md  Dockerfile  FEATURES.md  FINAL_RELEASE_STATUS_REPORT.md  FIX_VERIFICATION_CHECKLIST.md  GITHUB_RELEASE_NOTES_v0.1.0.md  HELP_CENTER_IMPLEMENTATION.md  HELP_TUTORIAL_SUMMARY.md  I18N_FIX_README.md  I18N_PYINSTALLER_FIX.md  I18N_QUICK_REFERENCE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  IMPORT_EXPORT_GUIDE.md  IMPORT_EXPORT_IMPLEMENTATION.md  INSTALLATION.md  INSTALL_GUIDE.md  LICENSE  (+69 more)
build_env/: pyvenv.cfg
docs/: HELP_QUICK_REFERENCE.md  performance.md  使用指南.md
package/: RELEASE_INFO.txt
resources/: README.md
scripts/: migrate_database.py
tests/: conftest.py  conftest_nogui.py  test_batch_operations.py  test_build_smoke.py  test_cache_service.py  test_company_service.py  test_dashboard_stats.py  test_dashboard_stats_simple.py  test_dashboard_widget.py  test_database_service.py  test_entity_detail_dialog.py  test_file_operations.py  test_help_center.py  test_import_export.py  test_instrumentation.py  test_library_postprocessor.py  test_match_integration.py  test_matching_basic.py  test_media_views.py  test_media_views_logic.py  test_media_views_smoke.py  test_metadata_editor.py  test_metadata_editor_integration.py  test_metadata_validator.py  test_models.py  test_multi_library.py  test_nfo_exporter.py  test_nfo_integration.py  test_performance_benchmarks.py  test_performance_benchmarks_legacy.py  test_persistence_integration.py  test_persistence_schema.py  test_person_service.py  test_poster_downloader.py  test_poster_integration.py  test_poster_settings.py  test_preferences_window.py  test_preview_panel.py  test_provider_workers_integration.py  test_providers.py  (+11 more)
(+157 files in other folders)
